--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,8 @@
 <%= render "shared/second-header"%>
 
+<%= link_to "Facebookで登録", user_facebook_omniauth_authorize_path, method: :post%>
+<%= link_to "Googleで登録", user_google_oauth2_omniauth_authorize_path, method: :post%>
+
 <%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
 <div class='form-wrap'>
   <div class='form-header'>
@@ -25,19 +28,22 @@
     <%= f.email_field :email, class:"input-default", id:"email", placeholder:"PC・携帯どちらでも可", autofocus: true %>
   </div>
   <div class="form-group">
-    <div class='form-text-wrap'>
-      <label class="form-text">パスワード</label>
-      <span class="indispensable">必須</span>
-    </div>
-    <%= f.password_field :password, class:"input-default", id:"password", placeholder:"6文字以上の半角英数字" %>
-    <p class='info-text'>※英字と数字の両方を含めて設定してください</p>
-  </div>
-  <div class="form-group">
-    <div class='form-text-wrap'>
-      <label class="form-text">パスワード(確認)</label>
-      <span class="indispensable">必須</span>
-    </div>
-    <%= f.password_field :password_confirmation, class:"input-default", id:"password-confirmation", placeholder:"同じパスワードを入力して下さい" %>
+    <%if @sns_id.present? %>
+      <%= hidden_field_tag :sns_auth, true %>
+    <% else %>
+      <div class="field">
+        <%= f.label :password %>
+        <% @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <br />
+        <%= f.password_field :password, autocomplete: "new-password" %>
+      </div>
+
+      <div class="field">
+        <%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+      </div>
+     <% end %>
   </div>
   <div class="form-group">
     <p class='form-info-header'>
